feat: implementar sistema de componentes base e customizados
- Adicionar componentes base: Button, Card, CardLogin, Checkbox
- Implementar componentes customizados: Icon, Loader, PasswordField
- Atualizar estilos CSS com utilities para surface e componentes
- Configurar rotas e estrutura do projeto
- Adicionar documentação do NavigationMenu
- Atualizar dependências e configurações do projeto

--- a/app/styles/utilities-surface.css
+++ b/app/styles/utilities-surface.css
@@ -531,6 +531,23 @@ CONTEXTUAL INTERACTION LAYERS
 }
 
 /* --------------------------------------------------------------------------
+placeholder
+-------------------------------------------------------------------------- */
+::placeholder {
+  color: var(--text-color-tertiary);
+  opacity: 1; /* Necessário para Firefox */
+}
+
+::-webkit-input-placeholder {
+  color: var(--text-color-tertiary);
+}
+
+::-moz-placeholder {
+  color: var(--text-color-tertiary);
+  opacity: 1;
+}
+
+/* --------------------------------------------------------------------------
 ACESSIBILIDADE
 -------------------------------------------------------------------------- */
 
