--- a/app/styles/primitives.css
+++ b/app/styles/primitives.css
@@ -34,30 +34,16 @@
 
   /* Typography */
 
-  --fluid-min-width: 360;
-  --fluid-max-width: 1400;
-  --fluid-screen: 100vw;
-  --type-scale: 1.2;
-  --type-base-size: 16;
-  --fluid-bp: calc(
-    (var(--fluid-screen) - var(--fluid-min-width) / 16 * 1rem) /
-      (var(--fluid-max-width) - var(--fluid-min-width))
-  );
-
-  /* Families */
-  --font-sans: "Nunito Sans", system-ui, -apple-system, sans-serif;
-  --font-monos: "JetBrains Mono Variable", "SF Mono", Consolas, monospace;
-
   /* Sizes */
-  --text-xs: clamp(0.75rem, 0.75rem + var(--fluid-bp) * 0.125, 0.8125rem);
-  --text-sm: clamp(0.875rem, 0.875rem + var(--fluid-bp) * 0.125, 0.9375rem);
-  --text-base: clamp(1rem, 1rem + var(--fluid-bp) * 0.125, 1.0625rem);
-  --text-lg: clamp(1.125rem, 1.125rem + var(--fluid-bp) * 0.25, 1.25rem);
-  --text-xl: clamp(1.25rem, 1.25rem + var(--fluid-bp) * 0.375, 1.4375rem);
-  --text-2xl: clamp(1.5rem, 1.5rem + var(--fluid-bp) * 0.5, 1.75rem);
-  --text-3xl: clamp(1.875rem, 1.875rem + var(--fluid-bp) * 0.625, 2.1875rem);
-  --text-4xl: clamp(2.25rem, 2.25rem + var(--fluid-bp) * 0.75, 2.625rem);
-  --text-5xl: clamp(3rem, 3rem + var(--fluid-bp) * 1, 3.75rem);
+  --text-xs: calc(var(--text-base) * 0.75);
+  --text-sm: calc(var(--text-base) * 0.875);
+  --text-base: 1rem;
+  --text-lg: calc(var(--text-base) * 1.125);
+  --text-xl: calc(var(--text-base) * 1.25);
+  --text-2xl: calc(var(--text-base) * 1.5);
+  --text-3xl: calc(var(--text-base) * 1.875);
+  --text-4xl: calc(var(--text-base) * 2.25);
+  --text-5xl: calc(var(--text-base) * 3);
 
   /* Font Weights */
   --font-weight-light: 300;
@@ -87,4 +73,25 @@
   --font-width-condensed: 75;
   --font-width-normal: 100;
   --font-width-expanded: 125;
+
+  --radius-xs: 0.125rem;
+  --radius-sm: 0.25rem;
+  --radius-md: 0.375rem;
+  --radius-lg: 0.5rem;
+  --radius-xl: 0.75rem;
+  --radius-2xl: 1rem;
+  --radius-3xl: 1.5rem;
+  --radius-4xl: 2rem;
+  --radius-5xl: 3rem;
+  --radius-6xl: 4rem;
+  --radius-full: 99rem;
+}
+
+@media (max-width: 600px) {
+  :root {
+    --text-base: 1.125rem;
+  }
+  .floater {
+    visibility: hidden;
+  }
 }
